Fixes: aroom chat alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,9 @@ body {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-height: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 code {
